; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/cd_hw/extr_cdd.c_cdd_init.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/cd_hw/extr_cdd.c_cdd_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@blip = common dso_local global i32** null, align 8
@snd = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cdd_init(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32**, i32*** @blip, align 8
  %7 = getelementptr inbounds i32*, i32** %6, i64 0
  store i32* %5, i32** %7, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i32**, i32*** @blip, align 8
  %10 = getelementptr inbounds i32*, i32** %9, i64 1
  store i32* %8, i32** %10, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @snd, i32 0, i32 0), align 4
  %13 = call i32 @blip_set_rates(i32* %11, i32 44100, i32 %12)
  %14 = load i32*, i32** %4, align 8
  %15 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @snd, i32 0, i32 0), align 4
  %16 = call i32 @blip_set_rates(i32* %14, i32 44100, i32 %15)
  ret void
}

declare dso_local i32 @blip_set_rates(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
